--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   firebase_database: ^12.0.4
   firebase_messaging: ^16.0.4
   cloud_functions: ^6.0.4
+  google_generative_ai: ^0.4.6
+  intl: ^0.20.2
+  permission_handler: ^11.0.1
+
 
   # Notifications
   flutter_local_notifications: ^19.5.0
